Fixed text-overflow

--- a/app/client/pages/Leagues/LeaguesList/LeaguesListDesktop/LeaguesListDesktop.module.scss
+++ b/app/client/pages/Leagues/LeaguesList/LeaguesListDesktop/LeaguesListDesktop.module.scss
@@ -42,9 +42,6 @@
 .leaderCell {
   min-width: 100px;
   flex: 2;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .leagueName {
@@ -55,9 +52,6 @@
 
 .leagueName,
 .leaderName {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
   display: flex;
   align-items: center;
 }
@@ -65,6 +59,9 @@
 .leagueNameName,
 .leaderNameName {
   flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .leagueImage,
@@ -72,6 +69,7 @@
   display: inline-block;
   width: 32px;
   height: 32px;
+  flex: 0 0 32px;
 
   @media (max-width: 1200px) {
     display: none;
